--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "astro": "^5.14.5",
+    "nodemailer": "^7.0.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.14"
